# Data-Structure-Challenges

./: reto4.cpp
Reto3/: Ejercicio32_Reto3_ED.cpp  Ejercicio33_Reto3_ED.cpp  Ejercicio34_Reto3_ED.cpp  Ejercicio_40_Reto3_ED.cpp  Ejercicio_42_Reto3_ED.cpp
reto5/: CMakeLists.txt  Explicación Proyecto
reto5/estudiante/src/: Ejercicio3_ExamenEnero2021.cpp  ejer3.cpp  ejercicio38.cpp  ejercicio40.cpp  ejercicio41.cpp
